--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "stylelint-config-standard": "^22.0.0",
     "tailwindcss": "^3.0.12",
     "typescript": "^4.4.3",
-    "vite": "^2.6.4",
+    "vite": "2.6.4",
     "vue-tsc": "^0.3.0"
   }
 }
