--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/vue-router": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
-    "@vitejs/plugin-vue": "^2.0.1",
+    "@vitejs/plugin-vue": "^2.1.0",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
@@ -40,7 +40,7 @@
     "stylelint-config-standard": "^24.0.0",
     "tailwindcss": "^3.0.12",
     "typescript": "^4.5.4",
-    "vite": "2.6.4",
+    "vite": "^2.7.13",
     "vue-tsc": "^0.30.2"
   }
 }
